--- a/src/App.css
+++ b/src/App.css
@@ -109,4 +109,65 @@
   font-size: 1.3em;
 }
 
+/*******************
+   FILE SYSTEM
+*******************/
+
+.file-system-root {
+  text-align: left;
+  font-size: 1.3em;
+  margin-top: 1em;
+  margin-left: -0.8em;
+}
+
+.file-item {
+  padding: 0.1em 0;
+  display: flex;
+}
+
+.file-item .icon {
+  flex-grow: 0;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.file-item .name {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+
+.directory-item-row {
+  padding: 0.1em 0;
+  display: flex;
+}
+
+.directory-item-row .icon {
+  flex-grow: 0;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.directory-item-row .name {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+
+.directory-children {
+  padding-left: 1.1em;
+  max-height: 1000px;
+  transform-origin: top;
+  transition: all 0.1s ease-in-out;
+}
+
+.directory-children.collapse {
+  transform: scaleY(0);
+  max-height: 0;
+}
+
 @import '../node_modules/react-mosaic-component/react-mosaic-component.css';
