--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,14 @@
   flex-direction: column;
   text-align: left;
   height: 100%;
+  font-family: monospace;
+  font-weight: 400;
 }
 
 .terminal-row {
   width: 100%;
   text-align: left;
-  font-size: 1.2em;
+  font-size: 1.5em;
   color: #aaa;
 }
 
@@ -72,7 +74,8 @@
 
 .terminal-row-prompt {
   color: #0f9af7;
-  margin-right: 5px;
+  margin-right: 10px;
+  font-weight: 900;
 }
 
 .terminal-data {
@@ -85,7 +88,7 @@
   display: flex;
   flex-direction: row;
 
-  padding-top: 5px;
+  padding-top: 10px;
   border-top: 1px solid #aaaaaa55;
 }
 
@@ -106,7 +109,7 @@
   color: white;
 
   font-family: inherit;
-  font-size: 1.3em;
+  font-size: 1.5em;
 }
 
 /*******************
@@ -168,6 +171,40 @@
 .directory-children.collapse {
   transform: scaleY(0);
   max-height: 0;
+}
+
+/*************************
+    OBJECT STORAGE
+*************************/
+
+.object-storage-root {
+  padding: 10px;
+}
+
+.object-row {
+  display: flex;
+  width: 100%;
+  text-align: left;
+  margin: 5px 0;
+}
+
+.object-row .hash {
+  font-family: monospace;
+  font-size: 1.5em;
+  padding: 5px;
+  flex-grow: 0;
+  color: white;
+  background: purple;
+  border-radius: 5px;
+}
+
+.object-row .object {
+  flex-grow: 1;
+  padding-left: 20px;
+  font-size: 1.3em;
+
+  display: flex;
+  align-items: center;
 }
 
 @import '../node_modules/react-mosaic-component/react-mosaic-component.css';
