--- a/src/app/panes/terminal/style.css
+++ b/src/app/panes/terminal/style.css
@@ -1,3 +1,13 @@
+.pane.terminal-pane {
+  border-color: #3c4d63;
+  background-color: #3c4d63;
+  color: white;
+}
+
+.terminal-pane .pane-body {
+  padding-top: 0;
+}
+
 .terminal-container {
   display: flex;
   flex-direction: column;
